# KVM-paper

./: .gitignore  LICENSE2  README.md  clean_pycache.sh  config.py  examine_ckpt.py  export_hf_single_file.py  pyproject.toml  run.sh  train.py  trainer.py  wrap_lmeval.py
configs/prolong/: base.yaml  tokens_15B.yaml  tokens_3B.yaml  tokens_7p5B.yaml
configs/prolong/120M/: ablation_kvm_no_head_temps.yaml  ablation_kvm_no_merge_gate.yaml  ablation_kvm_no_sink.yaml  ablation_kvm_no_vlens.yaml  gptalpha_bswa_wd.yaml  gptalpha_halfrope_swa_rope_wd.yaml  gptalpha_nope_swa_rope_wd.yaml  gptalpha_wd.yaml  kvm_no_append_gate_wd.yaml  kvm_sqrt16_no_append_gate_wd.yaml  kvm_sqrt16_no_merge_gate_wd.yaml  kvm_sqrt16_wd.yaml  kvm_swa_saturate1024_no_append_gate_wd.yaml  kvm_swa_saturate1024_no_merge_gate_wd.yaml  kvm_swa_saturate1024_wd.yaml  kvm_wd.yaml  ovq_swa_ts_c256_s1024_wd.yaml  rwkv_wd.yaml
configs/prolong/350M/: gptalpha_bswa_wd.yaml  gptalpha_halfrope_swa_rope_wd.yaml  gptalpha_nope_swa_rope_wd.yaml  gptalpha_wd.yaml  kvm_no_append_gate_wd.yaml  kvm_no_merge_gate_wd.yaml  kvm_sqrt16_no_append_gate_wd.yaml  kvm_sqrt16_wd.yaml  kvm_swa_saturate1024_no_append_gate_wd.yaml  kvm_swa_saturate1024_wd.yaml  kvm_wd.yaml  ovq_swa_ts_c256_s1024_wd.yaml  rwkv_wd.yaml
data/: dataset_details.py  preprocess.py  speedrun_data.py  speedrun_data_rwkv.py  speedrun_dataloader.py  varlen_dataset.py
loss_plot/: common.py  eval.py
loss_plot/results/: plot_block_losses_seaborn.py  plot_combined.py
model/: gptalpha_bswa_mixer.py  gptalpha_mixer.py  kvm_mixer.py  ovq_mixer.py  rwkv7_backbone.py  rwkv7_mixer.py  statesdictcache.py  swa_mixer.py  tokenshift.py  value_residual_mixin.py  varlen.py
optimizer/: empty_optimizer.py  muon.py
scripts/: eval.sh  extract_eval_metrics.py  install.sh  plot_textbook_chapters_32k.sh  training_runs.sh
utils/: __init__.py  defer.py  env.py  flex_attention.py  gpu.py  grad_cp.py  init.py  logger.py  opt.py
